2005-08-10  Inge Wallin  <ingwa@dhcp-254-153.lkpg.cendio.se>

	Fix an old FIXME: Get rid of KChartPart::m_bLoading;
	* kchart_part.{h,cc} (m_bLoading): removed
	(isLoading): removed

	Some code cleaning (improved comments).

2005-05-10  Inge Wallin  <inge@lysator.liu.se>
	
	More work on bug 105356:
	* kdchart/KDChartParams.h (KDChartParams): return _lineColor
	again.
	* kdchart/KDChartParams_io.h (saveXML): only save the line color
	if it is non-null.
	* kchart_part.cc (setAxisDefaults): Always set lineColor to
	null. This compensates for the (now fixed) bug in saving when
	reading back old charts.
	
2005-05-09  Fredrik Edemar  <f_edemar@linux.se>

        Fix bug 105356: Lines in a line chart are all black
        * kdchart/KDChartParams.h (lineColor()): always return an invalid
	QColor object in order for KDChartLinesPainter to use the current
	dataset color instead.

2005-05-06  Inge Wallin  <inge@lysator.liu.se>

	Fix bug 99995: KChart should be able to import CSV data
	* kchart_part.{h,cc} (doSetData): new method broken out of setData()
	(setData): Call doSetData
	kchart_view.cc (importData): Get data from the dialog and call
	KChartPart::doSetData()

	Code cleaning
	* csvimportdialog.{h,cc} (firstRowContainHeaders,
	firstColContainHeaders, rows, cols, text): Follow the Qt naming
	convention, and don't prefix the name with get...
	* misc: Remove #if 0:ed stuff
	
2005-04-25  Inge Wallin  <inge@lysator.liu.se>

	Continue on the CSV import
	* csvimportdialog.{h,cc} (getFirstRowContainHeaders,
	getFirstColContainHeaders): new methods

	Fix bug 101007: Error in labels when reading back saved files.
	* kchart_part.{h,cc} (setAxisDefaults): New method
	(misc methods): call setAxisDefaults.

2005-04-17  Fredrik Edemar  <f_edemar@linux.se>

        * KDChartBarPainter.cpp (KDChartBarPainter): Prevent the arrow to
	be drawn at the bottom of the lowest bar when dealing with
	negative numbers in a 3D bar chart. If all bars are <= 0 the bars