@@ -1,5 +1,12 @@
 2005-08-10  Inge Wallin  <ingwa@dhcp-254-153.lkpg.cendio.se>
 
+	Fix error in creating HiLo charts
+	(Bug number will be created)
+	* kchart_part.cc (paintContent): Add code to handle HiLo chart
+	separately.
+
+	----------------------------------------------------------------
+	
 	Fix an old FIXME: Get rid of KChartPart::m_bLoading;
 	* kchart_part.{h,cc} (m_bLoading): removed
 	(isLoading): removed
